deploy: 2a87b975ff93bbd80a39f088d8997e46247d8ac9

--- a/master_guide/index.html
+++ b/master_guide/index.html
@@ -878,7 +878,7 @@ GitHub</p>
 <h3 id="step-3-external-integrations">Step 3 — External Integrations</h3>
 <p>Notion: adapter functions search_notion_pages, get_page_snippet. 
 Notion Developers</p>
-<p>ClickUp: create_task, search_tasks; secret via vault. 
+<p>ClickUp: create_clickup_task, search_clickup_tasks; secret via vault.
 ClickUp Developer Docs</p>
 <p>Slack Inbound: /webhook/slack/command, verify signing secret. 
 Slack API</p>
@@ -939,7 +939,7 @@ GitHub</p>
 Notion Developers
  &amp; Python tutorial 
 pynotion.com</p>
-<p>ClickUp task endpoints 
+<p>ClickUp adapter &amp; task endpoints
 ClickUp Developer Docs
 ClickUp Developer Docs</p>
 <p>FastAPI JWT/OAuth2 patterns 
