deploy: 8c19e269c70228883ce5448d45b5aa257babc119

--- a/master_guide/index.html
+++ b/master_guide/index.html
@@ -880,7 +880,8 @@ GitHub</p>
 Notion Developers</p>
 <p>ClickUp: create_clickup_task, search_clickup_tasks; secret via vault.
 ClickUp Developer Docs</p>
-<p>Slack Inbound: /webhook/slack/command, verify signing secret. 
+<p>Slack Inbound: /webhook/slack/command, verify signing secret. Events can be
+ sent to /webhook/slack/event to capture channel messages.
 Slack API</p>
 <p>Stripe: /webhook/stripe, verify signature, enqueue sync_sale. 
 Stripe Docs</p>
